--- a/pages/early-development-school.html
+++ b/pages/early-development-school.html
@@ -404,8 +404,103 @@
                     </div>
                 </div>
             </section>
-
-            <!-- ... -->
+            <div class="advantage-item main__advantage-item --no-button --nowrap-slider" data-advantageBlock-id="department-for-little">
+                <div class="my-container advantage-item__container">
+                    <div class="advantage-item__desc">
+                        <div class="block-title advantage-item__desc__title">Отделение для&nbsp;самых маленьких&nbsp;— с&nbsp;9&nbsp;месяцев</div>
+                        <div class="advantage-item__desc-elements">
+                            <div class="advantage-item__desc-pre-title">Развиваем детей со&nbsp;всех&nbsp;сторон</div>
+                            <div class="advantage-item__desc-text">Занятия проходят в&nbsp;игровой форме и&nbsp;направлены на&nbsp;развитие познавательной деятельности, внимания, памяти, мышления, мелкой моторики рук, развитие речи. Это отличная возможность заложить базу для социализации ребенка в будущем. На первых занятиях для&nbsp;адаптации присутствует мама.</div>
+                            <div class="advantage-item__desc-buttons">
+                                <button class="my-button my-button_borderSquare advantage-item__desc-button">записаться</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="advantage-item__content">
+                        <div class="advantage-item__slider">
+                            <div class="advantage-item__swiper-controls">
+                                <div class="swiper-pagination advantage-item__swiper-pagination"></div>
+                                <div class="swiper-navigation advantage-item__swiper-navigation">
+                                    <div class="swiper-button-prev advantage-item__swiper-button-prev">
+                                        <svg width="27" height="27" viewBox="0 0 27 27" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <g clip-path="url(#clip0_92_1209)">
+                                                <path
+                                                    d="M21.0908 13.915L5.78616 13.915M5.78616 13.915L12.1631 20.292M5.78616 13.915L12.1631 7.53809"
+                                                    stroke="#4E6932" stroke-width="1.4" stroke-linecap="round"
+                                                    stroke-linejoin="round" />
+                                            </g>
+                                            <defs>
+                                                <clipPath id="clip0_92_1209">
+                                                    <rect width="26" height="26" fill="white"
+                                                        transform="translate(0.438477 0.915039)" />
+                                                </clipPath>
+                                            </defs>
+                                        </svg>
+                                    </div>
+                                    <div class="swiper-button-next advantage-item__swiper-button-next">
+                                        <svg width="27" height="27" viewBox="0 0 27 27" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <g clip-path="url(#clip0_2050_215)">
+                                                <path
+                                                    d="M5.78616 13.9151L21.0908 13.9151M21.0908 13.9151L14.7139 7.53811M21.0908 13.9151L14.7139 20.292"
+                                                    stroke="#4E6932" stroke-width="1.4" stroke-linecap="round"
+                                                    stroke-linejoin="round" />
+                                            </g>
+                                            <defs>
+                                                <clipPath id="clip0_2050_215">
+                                                    <rect width="26" height="26" fill="white"
+                                                        transform="translate(0.438477 0.915039)" />
+                                                </clipPath>
+                                            </defs>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper advantage-item__swiper">
+                                <div class="swiper-wrapper advantage-item__swiper-wrapper">
+                                    <div class="swiper-slide advantage-item__swiper-slide">
+                                        <div class="advantage-item__slide">
+                                            <div class="advantage-item__slide-title">Возрастные группы (разница в 3 месяца)</div>
+                                            <div class="advantage-item__slide-img-wrap">
+                                                <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt="" class="advantage-item__slide-img">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide advantage-item__swiper-slide">
+                                        <div class="advantage-item__slide">
+                                            <div class="advantage-item__slide-title">До 6 детей в&nbsp;группе</div>
+                                            <div class="advantage-item__slide-img-wrap">
+                                                <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt="" class="advantage-item__slide-img">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide advantage-item__swiper-slide">
+                                        <div class="advantage-item__slide">
+                                            <div class="advantage-item__slide-title">Музыкальные и&nbsp;спортивные паузы</div>
+                                            <div class="advantage-item__slide-img-wrap">
+                                                <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt="" class="advantage-item__slide-img">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide advantage-item__swiper-slide">
+                                        <div class="advantage-item__slide">
+                                            <div class="advantage-item__slide-title">Творческая работа</div>
+                                            <div class="advantage-item__slide-img-wrap">
+                                                <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt="" class="advantage-item__slide-img">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="advantage-item__buttons">
+                        <button class="my-button my-button_borderSquare advantage-item__button">ЗАПИСАТЬСЯ НА ЗАНЯТИЯ</button>
+                        <button class="my-button my-button_borderSquare my-button_noColor advantage-item__button">УЗНАТЬ БОЛЬШЕ</button>
+                    </div>
+                </div>
+            </div>
 
             <section class="child-age main__reviews">
                 <div class="my-container child-age__container">
@@ -836,8 +931,8 @@
                                                 <a href="../assets/images/pages/main/reviews/video-1.mp4"
                                                     data-fancybox="reviews-gallery">
                                                     <div class="reviews__slide-img-wrap --video-poster">
-                                                        <img src="../assets/images/pages/main/reviews/vide-img-1.jpg" alt=""
-                                                            class="reviews__slide-img">
+                                                        <img src="../assets/images/pages/main/reviews/vide-img-1.jpg"
+                                                            alt="" class="reviews__slide-img">
                                                     </div>
                                                 </a>
                                                 <div class="reviews__slide-text">Березовая, 8</div>
@@ -848,8 +943,8 @@
                                                 <a href="../assets/images/pages/main/reviews/video-2.mp4"
                                                     data-fancybox="reviews-gallery">
                                                     <div class="reviews__slide-img-wrap --video-poster">
-                                                        <img src="../assets/images/pages/main/reviews/vide-img-2.jpg" alt=""
-                                                            class="reviews__slide-img">
+                                                        <img src="../assets/images/pages/main/reviews/vide-img-2.jpg"
+                                                            alt="" class="reviews__slide-img">
                                                     </div>
                                                 </a>
                                                 <div class="reviews__slide-text">ул. Александра Невского, 60</div>
@@ -860,8 +955,8 @@
                                                 <a href="../assets/images/pages/main/reviews/video-1.mp4"
                                                     data-fancybox="reviews-gallery">
                                                     <div class="reviews__slide-img-wrap --video-poster">
-                                                        <img src="../assets/images/pages/main/reviews/vide-img-3.jpg" alt=""
-                                                            class="reviews__slide-img">
+                                                        <img src="../assets/images/pages/main/reviews/vide-img-3.jpg"
+                                                            alt="" class="reviews__slide-img">
                                                     </div>
                                                 </a>
                                                 <div class="reviews__slide-text">Алмазная, 5</div>
@@ -872,8 +967,8 @@
                                                 <a href="../assets/images/pages/main/reviews/video-2.mp4"
                                                     data-fancybox="reviews-gallery">
                                                     <div class="reviews__slide-img-wrap --video-poster">
-                                                        <img src="../assets/images/pages/main/reviews/vide-img-1.jpg" alt=""
-                                                            class="reviews__slide-img">
+                                                        <img src="../assets/images/pages/main/reviews/vide-img-1.jpg"
+                                                            alt="" class="reviews__slide-img">
                                                     </div>
                                                 </a>
                                                 <div class="reviews__slide-text">Березовая, 8</div>
@@ -884,8 +979,8 @@
                                                 <a href="../assets/images/pages/main/reviews/video-1.mp4"
                                                     data-fancybox="reviews-gallery">
                                                     <div class="reviews__slide-img-wrap --video-poster">
-                                                        <img src="../assets/images/pages/main/reviews/vide-img-1.jpg" alt=""
-                                                            class="reviews__slide-img">
+                                                        <img src="../assets/images/pages/main/reviews/vide-img-1.jpg"
+                                                            alt="" class="reviews__slide-img">
                                                     </div>
                                                 </a>
                                                 <div class="reviews__slide-text">Березовая, 8</div>
@@ -897,7 +992,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="../assets/images/pages/main/background/cones.png" alt="" class="reviews__background-img">
+                <img src="./assets/images/pages/main/background/cones.png" alt="" class="reviews__background-img">
             </section>
 
             <!-- ЕСЛИ feedback-block НАХОДИТЬСЯ ВНЕ КАКОЙ-ЛИБО СЕКЦИИ, ТО НАДО ЕГО ОБЕРНУТЬ ВНУТРЬ БЛОКА feedback, ЕСЛИ ОН ЧАСТЬ СЕКЦИИ (КАК НА ГЛАВНОЙ), ТАМ СВОЯ УНИКАЛЬНАЯ ОБЁРТКА -->
@@ -1086,6 +1181,91 @@
         alignElementsHeight(arrayTitles);
     })
 </script>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const advantageItems = Array.from(document.querySelectorAll(".advantage-item"));
+
+        advantageItems.forEach(item => {
+            const itemId = item.getAttribute("data-advantageBlock-id");
+
+            if (item.classList.contains('--nowrap-slider')) {
+                noWrapSwiperInit(itemId);
+            } else {
+                staffSwiperInit(itemId);
+            }
+        })
+
+        function staffSwiperInit(id) {
+            const swiper1 = new Swiper(`[data-advantageBlock-id=${id}] .advantage-item__swiper`, {
+                direction: 'horizontal',
+                slidesPerView: 1,
+                spaceBetween: 24,
+                pagination: {
+                    el: `[data-advantageBlock-id=${id}] .advantage-item__swiper-pagination`,
+                },
+                navigation: {
+                    nextEl: `[data-advantageBlock-id=${id}] .advantage-item__swiper-button-next`,
+                    prevEl: `[data-advantageBlock-id=${id}] .advantage-item__swiper-button-prev`,
+                },
+                breakpoints: {
+                    551: {
+                        slidesPerView: 2,
+                    },
+                    769: {
+                        slidesPerView: 2,
+                        spaceBetween: 28,
+                        allowTouchMove: true,
+                        noSwiping: false,
+                        mousewheel: true,
+                    },
+                    991: {
+                        slidesPerView: 3,
+                        allowTouchMove: false, // Отключает свайп мышью и касаниями
+                        noSwiping: true,      // Блокирует перетаскивание полностью
+                        mousewheel: false,
+                    }
+                }
+            });
+        }
+
+        function noWrapSwiperInit(id) {
+            const swiper2 = new Swiper(`[data-advantageBlock-id=${id}] .advantage-item__swiper`, {
+            direction: 'horizontal',
+            slidesPerView: 1.15,
+            spaceBetween: 20,
+            pagination: {
+                el: `[data-advantageBlock-id=${id}] .advantage-item__swiper-pagination`,
+                type: 'custom',
+                renderCustom: function (swiper, current, total) {
+                    return `${String(current).padStart(2, '0')}`;
+                },
+            },
+            navigation: {
+                nextEl: `[data-advantageBlock-id=${id}] .advantage-item__swiper-button-next`,
+                prevEl: `[data-advantageBlock-id=${id}] .advantage-item__swiper-button-prev`,
+            },
+            breakpoints: {
+                551: {
+                    slidesPerView: 1.15,
+                    spaceBetween: 24,
+                },
+                769: {
+                    slidesPerView: 2.1,
+                    spaceBetween: 24,
+                    allowTouchMove: true,
+                },
+                991: {
+                    slidesPerView: 2,
+                    spaceBetween: 24,
+                    allowTouchMove: false,
+                }
+            }
+        });
+        }
+    });
+</script>
+
 
 <script>
     const childAgeSwiper = new Swiper('.child-age__swiper', {
