--- a/pages/about.html
+++ b/pages/about.html
@@ -722,17 +722,9 @@
                                             <div class="reviews__slide">
                                                 <a href="../assets/images/pages/main/reviews/video-1.mp4"
                                                     data-fancybox="reviews-gallery">
-                                                    <div class="reviews__slide-img-wrap">
+                                                    <div class="reviews__slide-img-wrap --video-poster">
                                                         <img src="../assets/images/pages/main/reviews/vide-img-1.jpg" alt=""
                                                             class="reviews__slide-img">
-                                                        <div class="reviws__slide-play-button-wrap">
-                                                            <svg width="49" height="49" viewBox="0 0 49 49" fill="none"
-                                                                xmlns="http://www.w3.org/2000/svg">
-                                                                <path
-                                                                    d="M24.4385 3.91504C12.832 3.91504 3.43848 13.3074 3.43848 24.915C3.43848 36.5216 12.8306 45.915 24.4385 45.915C36.0451 45.915 45.4385 36.5227 45.4385 24.915C45.4385 13.3084 36.0461 3.91504 24.4385 3.91504ZM32.0049 27.2462L22.137 32.9479C21.3046 33.429 20.2781 33.4298 19.4442 32.9487C18.611 32.4678 18.0977 31.5788 18.0977 30.6169V19.2133C18.0977 18.2512 18.6111 17.3623 19.4442 16.8815C19.8606 16.6411 20.3253 16.5209 20.7901 16.5209C21.2552 16.5209 21.7204 16.6414 22.137 16.882L32.005 22.5838C32.8375 23.0648 33.3503 23.9534 33.3503 24.915C33.3503 25.8766 32.8374 26.7651 32.0049 27.2462Z"
-                                                                    fill="#4E6932" />
-                                                            </svg>
-                                                        </div>
                                                     </div>
                                                 </a>
                                                 <div class="reviews__slide-text">Березовая, 8</div>
@@ -742,17 +734,9 @@
                                             <div class="reviews__slide">
                                                 <a href="../assets/images/pages/main/reviews/video-2.mp4"
                                                     data-fancybox="reviews-gallery">
-                                                    <div class="reviews__slide-img-wrap">
+                                                    <div class="reviews__slide-img-wrap --video-poster">
                                                         <img src="../assets/images/pages/main/reviews/vide-img-2.jpg" alt=""
                                                             class="reviews__slide-img">
-                                                        <div class="reviws__slide-play-button-wrap">
-                                                            <svg width="49" height="49" viewBox="0 0 49 49" fill="none"
-                                                                xmlns="http://www.w3.org/2000/svg">
-                                                                <path
-                                                                    d="M24.4385 3.91504C12.832 3.91504 3.43848 13.3074 3.43848 24.915C3.43848 36.5216 12.8306 45.915 24.4385 45.915C36.0451 45.915 45.4385 36.5227 45.4385 24.915C45.4385 13.3084 36.0461 3.91504 24.4385 3.91504ZM32.0049 27.2462L22.137 32.9479C21.3046 33.429 20.2781 33.4298 19.4442 32.9487C18.611 32.4678 18.0977 31.5788 18.0977 30.6169V19.2133C18.0977 18.2512 18.6111 17.3623 19.4442 16.8815C19.8606 16.6411 20.3253 16.5209 20.7901 16.5209C21.2552 16.5209 21.7204 16.6414 22.137 16.882L32.005 22.5838C32.8375 23.0648 33.3503 23.9534 33.3503 24.915C33.3503 25.8766 32.8374 26.7651 32.0049 27.2462Z"
-                                                                    fill="#4E6932" />
-                                                            </svg>
-                                                        </div>
                                                     </div>
                                                 </a>
                                                 <div class="reviews__slide-text">ул. Александра Невского, 60</div>
@@ -762,17 +746,9 @@
                                             <div class="reviews__slide">
                                                 <a href="../assets/images/pages/main/reviews/video-1.mp4"
                                                     data-fancybox="reviews-gallery">
-                                                    <div class="reviews__slide-img-wrap">
+                                                    <div class="reviews__slide-img-wrap --video-poster">
                                                         <img src="../assets/images/pages/main/reviews/vide-img-3.jpg" alt=""
                                                             class="reviews__slide-img">
-                                                        <div class="reviws__slide-play-button-wrap">
-                                                            <svg width="49" height="49" viewBox="0 0 49 49" fill="none"
-                                                                xmlns="http://www.w3.org/2000/svg">
-                                                                <path
-                                                                    d="M24.4385 3.91504C12.832 3.91504 3.43848 13.3074 3.43848 24.915C3.43848 36.5216 12.8306 45.915 24.4385 45.915C36.0451 45.915 45.4385 36.5227 45.4385 24.915C45.4385 13.3084 36.0461 3.91504 24.4385 3.91504ZM32.0049 27.2462L22.137 32.9479C21.3046 33.429 20.2781 33.4298 19.4442 32.9487C18.611 32.4678 18.0977 31.5788 18.0977 30.6169V19.2133C18.0977 18.2512 18.6111 17.3623 19.4442 16.8815C19.8606 16.6411 20.3253 16.5209 20.7901 16.5209C21.2552 16.5209 21.7204 16.6414 22.137 16.882L32.005 22.5838C32.8375 23.0648 33.3503 23.9534 33.3503 24.915C33.3503 25.8766 32.8374 26.7651 32.0049 27.2462Z"
-                                                                    fill="#4E6932" />
-                                                            </svg>
-                                                        </div>
                                                     </div>
                                                 </a>
                                                 <div class="reviews__slide-text">Алмазная, 5</div>
@@ -782,17 +758,9 @@
                                             <div class="reviews__slide">
                                                 <a href="../assets/images/pages/main/reviews/video-2.mp4"
                                                     data-fancybox="reviews-gallery">
-                                                    <div class="reviews__slide-img-wrap">
+                                                    <div class="reviews__slide-img-wrap --video-poster">
                                                         <img src="../assets/images/pages/main/reviews/vide-img-1.jpg" alt=""
                                                             class="reviews__slide-img">
-                                                        <div class="reviws__slide-play-button-wrap">
-                                                            <svg width="49" height="49" viewBox="0 0 49 49" fill="none"
-                                                                xmlns="http://www.w3.org/2000/svg">
-                                                                <path
-                                                                    d="M24.4385 3.91504C12.832 3.91504 3.43848 13.3074 3.43848 24.915C3.43848 36.5216 12.8306 45.915 24.4385 45.915C36.0451 45.915 45.4385 36.5227 45.4385 24.915C45.4385 13.3084 36.0461 3.91504 24.4385 3.91504ZM32.0049 27.2462L22.137 32.9479C21.3046 33.429 20.2781 33.4298 19.4442 32.9487C18.611 32.4678 18.0977 31.5788 18.0977 30.6169V19.2133C18.0977 18.2512 18.6111 17.3623 19.4442 16.8815C19.8606 16.6411 20.3253 16.5209 20.7901 16.5209C21.2552 16.5209 21.7204 16.6414 22.137 16.882L32.005 22.5838C32.8375 23.0648 33.3503 23.9534 33.3503 24.915C33.3503 25.8766 32.8374 26.7651 32.0049 27.2462Z"
-                                                                    fill="#4E6932" />
-                                                            </svg>
-                                                        </div>
                                                     </div>
                                                 </a>
                                                 <div class="reviews__slide-text">Березовая, 8</div>
@@ -802,17 +770,9 @@
                                             <div class="reviews__slide">
                                                 <a href="../assets/images/pages/main/reviews/video-1.mp4"
                                                     data-fancybox="reviews-gallery">
-                                                    <div class="reviews__slide-img-wrap">
+                                                    <div class="reviews__slide-img-wrap --video-poster">
                                                         <img src="../assets/images/pages/main/reviews/vide-img-1.jpg" alt=""
                                                             class="reviews__slide-img">
-                                                        <div class="reviws__slide-play-button-wrap">
-                                                            <svg width="49" height="49" viewBox="0 0 49 49" fill="none"
-                                                                xmlns="http://www.w3.org/2000/svg">
-                                                                <path
-                                                                    d="M24.4385 3.91504C12.832 3.91504 3.43848 13.3074 3.43848 24.915C3.43848 36.5216 12.8306 45.915 24.4385 45.915C36.0451 45.915 45.4385 36.5227 45.4385 24.915C45.4385 13.3084 36.0461 3.91504 24.4385 3.91504ZM32.0049 27.2462L22.137 32.9479C21.3046 33.429 20.2781 33.4298 19.4442 32.9487C18.611 32.4678 18.0977 31.5788 18.0977 30.6169V19.2133C18.0977 18.2512 18.6111 17.3623 19.4442 16.8815C19.8606 16.6411 20.3253 16.5209 20.7901 16.5209C21.2552 16.5209 21.7204 16.6414 22.137 16.882L32.005 22.5838C32.8375 23.0648 33.3503 23.9534 33.3503 24.915C33.3503 25.8766 32.8374 26.7651 32.0049 27.2462Z"
-                                                                    fill="#4E6932" />
-                                                            </svg>
-                                                        </div>
                                                     </div>
                                                 </a>
                                                 <div class="reviews__slide-text">Березовая, 8</div>
